fix overlay z-index

--- a/mixins/wordpress/divi/_slim_admin_interface.sass
+++ b/mixins/wordpress/divi/_slim_admin_interface.sass
@@ -42,6 +42,7 @@ $divi-blue-color: #244d9d !default
   color: $divi-blue-color !important
 
 .et_pb_modal_settings_container
+  z-index: 99999 !important
   box-shadow: 10px 10px 48px 15px rgba(0,0,0,0.26) !important
   .et-pb-main-settings
     bottom: 40px !important
